2007-02-16  Murray Cumming  <murrayc@murrayc.com>

	* examples/example_music_collection.glom: Publishers table: Correct the Albums relationship, 
	and add a list of related albums to the details view.

2007-02-16  Murray Cumming  <murrayc@murrayc.com>

	* glom/relationships_overview/dialog_relationships_overview.cc:
	* glom/relationships_overview/dialog_relationships_overview.h: Added an override of 
	load_from_document() so that the tables are actually shown on the canvas.

2007-02-16  Rasmus Toftdahl Olesen  <halfdan@halfdans.net>

	* glom/relationships_overview/dialog_relationships_overview.cc:
	* glom/relationships_overview/dialog_relationships_overview.h:
	Updated for latest goocanvas API. Note that this code is disabled by default.
	Bug #408408.

1.3.9:

2007-02-16  Murray Cumming  <murrayc@murrayc.com>

	* glom/libglom/Makefile.am:
	* glom/libglom/connectionpool.cc:
	* glom/libglom/connectionpool.h: Added check_postgres_is_available_with_warning(), 
	and install_postgress(). That latter may be patched by distros that choose (wrongly, 
	I believe) not to make Glom depend on Postgres at install-time.
	There is some commented-out example code, with many helpful comments, implementing 
	the install-at-runtime code for Ubuntu/Debian.
	* glom/libglom/gst-package.c:
	* glom/libglom/gst-package.h: ifdefed-out helper code, taken from the Ubuntu/Debian patches 
	for gnome-system-tools.
	* glom/main.cc:  main(): Call check_postgres_is_available_with_warning().
	If Postgres is not installed, and cannot be installed, then Glom will quit.

1.3.8:

2007-02-12  Murray Cumming  <murrayc@murrayc.com>

	* configure.in: Depend on avahi-glib.
	* glom/libglom/connectionpool.cc:
	* glom/libglom/connectionpool.h: Added avahi_start_publishing() and 
	avahi_stop_publishing() and use them to advertise the database server when self-hosting, 
	with a made-up avahi service type name. This is rough code based on the avahi examples. 