@@ -759,7 +759,9 @@ bool App_Glom::on_document_load()
 
           if(!is_example) /* It will be started later, after we have asked for the initial db name/title and created the files.*/
           {
-            connection_pool->start_self_hosting(); //Stopped in on_menu_file_close().
+            const bool test = connection_pool->start_self_hosting(); //Stopped in on_menu_file_close().
+            if(!test)
+              return false;
           }
         }
         else
